--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,16 +4,16 @@
       <div class="row">
         <div class="col-xs-5 form-group">
           <label for="name">NAme</label>
-          <input type="text" id="name" class="form-control"/>
+          <input type="text" id="name" class="form-control" #nameInput/>
         </div>
         <div class="col-xs-3 form-group">
           <label for="amount">amount</label>
-          <input type="text" id="amount" class="form-control"/>
+          <input type="text" id="amount" class="form-control" #amountInput/>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 form-group">
-            <button class="btn btn-success" type="submit">Add</button>
+            <button class="btn btn-success" type="submit"  (click)="onAddItem()">Add</button>
             <button class="btn btn-danger" type="button">Delete</button>
             <button class="btn btn-info" type="button">Clear</button>
         </div>
