--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="dropdown">
+    <div class="btn-group " appDropdown>
       <button class="btn btn-primary dropdown-toggle">Manage Recipe<span class="caret"></span></button>
       <ul class="dropdown-menu">
         <li><a href="#">To shopping list</a></li>
