--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -5,6 +5,6 @@
 </div><br />
 <div class="row">
   <div class="col-xs-12">
-    <app-recipe-item *ngFor="let recipeEl of recipes"  [recipe]="recipeEl"  (recipeSelected)=onRecipeSelected(recipeEl)></app-recipe-item>
+    <app-recipe-item *ngFor="let recipeEl of recipes"  [recipe]="recipeEl" ></app-recipe-item>
   </div>
 </div>
