--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -13,9 +13,9 @@
     <div class="btn-group " appDropdown>
       <button class="btn btn-primary dropdown-toggle">Manage Recipe<span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a href="#">To shopping list</a></li>
-        <li><a href="#">Edit recipe</a></li>
-        <li><a href="#">Delete recipe</a></li>
+        <li><a (click)='onAddToShoppingList()' style="cursor:pointer">To shopping list</a></li>
+        <li><a style="cursor:pointer" (click)="onEditRecipe()">Edit recipe</a></li>
+        <li><a style="cursor:pointer">Delete recipe</a></li>
       </ul>
     </div>
   </div>
@@ -27,6 +27,8 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredient
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">{{ingredient.name}} - {{ingredient.amount}}</li>
+    </ul>
   </div>
 </div>
