--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,24 @@
 <nav class="navbar navbar-inverse">
   <div class="container">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Recipie Book</a>"
+      <a href="#" class="navbar-brand"><i class="fa fa-cutlery fa-1x" aria-hidden="true"></i> FoodAPP</a>"
     </div>
      <div class="collapse navbar-collapse">
        <ul class="nav navbar-nav">
-         <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
-         <li><a href="#" (click)="onSelect('shopping-list')">shopping-list</a></li>
+         <!-- <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
+         <li><a href="#" (click)="onSelect('shopping-list')">shopping-list</a></li> -->
+         <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+         <li routerLinkActive="active"><a routerLink="/shopping-list">shopping-list</a></li>
        </ul>
        <ul class="nav navbar-nav navbar-right">
          <li class="dropdown" appDropdown>
-           <a href="#" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
+           <a class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
            <ul class="dropdown-menu">
              <li>
-                <a href="#">SaveData</a>
+                <a style="cursor:pointer">SaveData</a>
              </li>
              <li>
-               <a href="#">FetchData</a>
+               <a style="cursor:pointer">FetchData</a>
              </li>
            </ul>
          </li>
