--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,7 +15,7 @@
       <ul class="dropdown-menu">
         <li><a (click)='onAddToShoppingList()' style="cursor:pointer">To shopping list</a></li>
         <li><a style="cursor:pointer" (click)="onEditRecipe()">Edit recipe</a></li>
-        <li><a style="cursor:pointer">Delete recipe</a></li>
+        <li><a style="cursor:pointer"  (click)="onDelteRecipe()">Delete recipe</a></li>
       </ul>
     </div>
   </div>
