--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand"><i class="fa fa-cutlery fa-1x" aria-hidden="true"></i> FoodAPP</a>"
+      <a routerLink='/' class="navbar-brand"><i class="fa fa-cutlery fa-1x" aria-hidden="true"></i> FoodAPP</a>"
     </div>
      <div class="collapse navbar-collapse">
        <ul class="nav navbar-nav">
