--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,3 +1,63 @@
-<p>
-  recipe-edit works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form [formGroup]='recipeForm' (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div col-xs-12>
+          <button class="btn btn-success" type="submit" [disabled]="!recipeForm.valid" >Save</button>
+          <button class="btn btn-danger" type="button" (click)=" onCancel()">Cancel</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" formControlName="name"/>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="imagePath">Image Url</label>
+            <input type="text" class="form-control" id="imagePath" formControlName="imagePath" #imagePath/>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <img [src]="imagePath.value" class="img-responsive" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <textarea type="text" id="description" class="form-control" rows="6" formControlName="description"></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12" formArrayName="ingredients">
+          <div class="row"
+           *ngFor="let ingredient of recipeForm.get('ingredients').controls; let i =index"
+          [formGroupName]='i' style="margin-top:10px">
+            <div class="col-xs-8">
+              <input type="text" class="form-control" formControlName="name"/>
+            </div>
+            <div class="col-xs-2">
+              <input type="number" class="form-control" formControlName="amount"/>
+            </div>
+            <div class="col-xs-2">
+              <button class="btn btn-danger" (click)="onDeleteIngredient(i)">x</button>
+            </div>
+          </div>
+          <hr />
+          <div class="row">
+            <div class="col-xs-12">
+              <button class="btn btn-success" type="button" (click)="onAddIngredient()">AddIngredient</button>
+            </div>
+          </div>
+          </div>
+      </div>
+    </form>
+</div>
