--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,21 +1,21 @@
 <div class="row">
   <div class="col-xs-12">
-    <form >
+    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="row">
         <div class="col-xs-5 form-group">
-          <label for="name">NAme</label>
-          <input type="text" id="name" class="form-control" #nameInput/>
+          <label for="name">Name</label>
+          <input type="text" id="name" class="form-control" name="name" ngModel  required/>
         </div>
         <div class="col-xs-3 form-group">
           <label for="amount">amount</label>
-          <input type="text" id="amount" class="form-control" #amountInput/>
+          <input type="text" id="amount" class="form-control" name="amount" ngModel required pattern="^[1-9]+[0-9]*$"/>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 form-group">
-            <button class="btn btn-success" type="submit"  (click)="onAddItem()">Add</button>
-            <button class="btn btn-danger" type="button">Delete</button>
-            <button class="btn btn-info" type="button">Clear</button>
+            <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{editMode ? "Update":"Add"}}</button>
+            <button class="btn btn-danger" type="button" (click)="onDelete()" *ngIf="editMode">Delete</button>
+            <button class="btn btn-info" type="button" (click)="onClear()">Clear</button>
         </div>
       </div>
     </form>
