--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,12 +14,8 @@
          <li class="dropdown" appDropdown>
            <a class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
            <ul class="dropdown-menu">
-             <li>
-                <a style="cursor:pointer">SaveData</a>
-             </li>
-             <li>
-               <a style="cursor:pointer">FetchData</a>
-             </li>
+             <li><a style="cursor: pointer;" (click)="onSaveData()">Save Data</a></li>
+             <li><a style="cursor: pointer;" (click)="onFetchData()">Fetch Data</a></li>
            </ul>
          </li>
        </ul>
