--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,24 +1,26 @@
 <nav class="navbar navbar-inverse">
-  <div class="container">
-    <div class="navbar-header">
-      <a routerLink='/' class="navbar-brand"><i class="fa fa-cutlery fa-1x" aria-hidden="true"></i> FoodAPP</a>"
-    </div>
-     <div class="collapse navbar-collapse">
-       <ul class="nav navbar-nav">
-         <!-- <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
-         <li><a href="#" (click)="onSelect('shopping-list')">shopping-list</a></li> -->
-         <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
-         <li routerLinkActive="active"><a routerLink="/shopping-list">shopping-list</a></li>
-       </ul>
-       <ul class="nav navbar-nav navbar-right">
-         <li class="dropdown" appDropdown>
-           <a class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
-           <ul class="dropdown-menu">
-             <li><a style="cursor: pointer;" (click)="onSaveData()">Save Data</a></li>
-             <li><a style="cursor: pointer;" (click)="onFetchData()">Fetch Data</a></li>
-           </ul>
-         </li>
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a routerLink='/' class="navbar-brand"><i class="fa fa-cutlery fa-1x" aria-hidden="true"></i> FoodAPP</a>"
+  </div>
+    <div class="collapse navbar-collapse" id="navbar">
+       <ul class="nav navbar-nav pull-right">
+          <!-- <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
+          <li><a href="#" (click)="onSelect('shopping-list')">shopping-list</a></li> -->
+          <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+          <li routerLinkActive="active"><a routerLink="/shopping-list">shopping-list</a></li>
+          <li class="dropdown" appDropdown>
+            <a class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a style="cursor: pointer;" (click)="onSaveData()">Save Data</a></li>
+                <li><a style="cursor: pointer;" (click)="onFetchData()">Fetch Data</a></li>
+              </ul>
+          </li>
        </ul>
      </div>
-  </div>
 </nav>
